# abb-externally-guided-motion

./: CMakeLists.txt  CMakePresets.json  EgmMain.cpp  EgmMain.h  README.md
egmdemo/: CMakeLists.txt  CMakePresets.json  demo.cpp  demo.h
egmdemo/src/egm/: EgmPositions.h  EgmProto.cpp  EgmProto.h  EgmSocket.cpp  EgmSocket.h  egm.pb.cpp
src/demo/: EgmPositions.h  EgmProto.cpp  EgmProto.h  EgmSocket.cpp  EgmSocket.h
